--- a/src/pages/ReadingJourney.css
+++ b/src/pages/ReadingJourney.css
@@ -2,6 +2,17 @@
   padding-bottom: var(--space-3xl);
 }
 
+.reading-journey__container-wrap {
+  position: relative;
+  z-index: 0;
+}
+
+.reading-journey__leaf-title {
+  position: absolute;
+  top: -15px;
+  right: -30px;
+}
+
 .reading-journey__title {
   font-size: 2.5rem;
   font-family: var(--font-serif);
